# cps

./: package-lock.json  package.json  tsconfig.json
src/: Console.ts  cps-api.spec.ts  cps-api.ts  cps.ts  fake.ts
src/commands/: cmake-api.ts  cmake-commands.ts  command.ts  conan-api.spec.ts  conan-api.ts  conan-commands.ts  conan-extension.spec.ts  conan-extension.ts  executor.ts
src/conan/: package.ts
src/config/: cmake.ts  conan.ts  config-manager.spec.ts  config-manager.ts  cps-config.spec.ts  cps-config.ts  executable.ts  library.ts  option.ts  package.ts  pip.ts  tool.ts
src/config/data/: cps.yml  cps2.yml  cps3.yml  cps4.yml  min.yml
src/data/: CMakeLists.txt  Doxyfile  conanfile.py  conanfile2.py  cps.cmake  cps.yml
src/data/new/: CMakeLists.txt  conanfile.py
src/data/newWithTest/: CMakeLists.txt  conanfile.py
src/data/newWithTest/include/: abc.h
src/data/newWithTest/src/: abc.cpp
src/data/newWithTest/test_package/: CMakeLists.txt  conanfile.py
src/data/newWithTest/test_package/src/: example.cpp
src/error/: invalide-path-error.ts  validation-error.ts
src/generators/: clang-generator.ts  cmakefile-generator.spec.ts  cmakefile-generator.ts  conanfile-generator.spec.ts  conanfile-generator.ts  cpp-generator.ts  cps-generator.ts  doxygen-generator.ts  pip-generator.ts
src/generators/data/: CMakeLists.txt  conanfile.py
src/generators/templates/: CMakeLists.txt  conanfile.py  cps.yml  (+5 more)
src/input/: console-input.ts  fake-input.ts  item.ts  text-input.ts
src/output/: console-output.ts  fake-output.ts  text-output.ts
src/utils/: utils.ts
(+6 files in other folders)
